package designpatterns.creational.abstractfactory.demoprototype.dropdowncomponent;

public class LinuxDropdownComponent extends DropdownComponent {
    public void paint() {
        System.out.println("You have created LinuxDropdownComponent.");
    }
}
