package designpatterns.creational.abstractfactory.demoprototype.dropdowncomponent;

public class MacOSDropdownComponent extends DropdownComponent {
    public void paint() {
        System.out.println("You have created MacOSDropdownComponent.");
    }
}
