package designpatterns.creational.abstractfactory.demoprototype.textboxcomponent;

public class LinuxTextboxComponent extends TextboxComponent {
    public void paint() {
        System.out.println("You have created LinuxTextboxComponent.");
    }
}
