package designpatterns.creational.abstractfactory.demoprototype.textboxcomponent;

public class MacOSTextboxComponent extends TextboxComponent {
    public void paint() {
        System.out.println("You have created MacOSTextboxComponent.");
    }
}
